# model_monitoring

./: Dockerfile  dvc.yaml  pyproject.toml  requirements.txt
flask_app/: app.py  requirements.txt  train_model.py
flask_app/templates/: index.html
